    * Fixed an error when trying to edit a user. (Bug 2696)
    * Make sure a useradmin only can list users he can edit. (Bug 2757)
    * Sometimes when using the file administrator, some files would be unremovable.
      Trying to remove them will now give a rather nasty error message instead of failing silently.
      This still needs improvement. (Bug 2442)
    * The link checker should now be a little more responsive. (Bug 2587) 

    Of interest to API-using developers:

    * Created package com.imcode.util with generic non-imCMS-specific utilities (Bug 2493):
        - ChainableReversibleNullComparator - Moved here from com.imcode.imcms.api.util
        - ComparatorWrapper - Moved here from com.imcode.imcms.api.util
        - HumanReadable - Get human readable byte sizes and time spans.
        - ImageSize - Get the size of an image in somewhat more efficient manner than ImageIO.read().
        - MultipartHttpServletRequest - Extends HttpServletRequest for
          file upload with support from Jakarta Commons-FileUpload.
    * Users can now change their own attributes. (Bug 2708)
    * Added classes:
        - Role - Represents a user-role. (Bug 2676)
        - SaveException - Thrown when something can't be saved.
        - AlreadyExistsException - Extends SaveException.
    * Changed classes:
        - MaxCategoriesOfTypeExceededException - Extends SaveException
        - CategoryAlreadyExistsException - Extends AlreadyExistsException
        - CategoryTypeAlreadyExistsException - Extends AlreadyExistsException
        - UserAlreadyExistsException - Extends AlreadyExistsException
        - RoleAlreadyExistsException - Extends AlreadyExistsException
    * Deprecated classes:
        - com.imcode.imcms.api.util.ChainableReversibleNullComparator - Moved to com.imcode.util
        - com.imcode.imcms.api.util.ComparatorWrapper - Moved to com.imcode.util
    * Added methods: