@@ -2,20 +2,20 @@
                  java.util.*" errorPage="error.jsp" %>
 <html>
 <body>
-<h1>Show document permissions</h1>
-There are three basic kinds of permissions<br>
+<h1>Document permissions</h1>
+<p>There are three basic kinds of permissions:</p>
 <ul>
   <li>Full</li>
   <li>Read</li>
   <li>None</li>
 </ul>
 <p>
-In between "Full" and "Read" there can also be defined two that can be modified, they are called
+In between "Full" and "Read" there can also be defined two that are modifiable:
 <ul>
   <li>Restricted One (1)</li>
   <li>Restricted Two (2)</li>
 </ul>
-and can be set differently for different pages (and sub pages).
+They can be set differently for different pages (and for new pages created from them).
 </p>
 <%  int documentId = 1001;
     ContentManagementSystem imcmsSystem = ContentManagementSystem.fromRequest( request );
@@ -26,8 +26,8 @@ and can be set differently for different pages (and sub pages).
 Every document has a mapping of permissions to roles.<br>
 This is a map of the format (RoleName,DocumentPermissionSet)
 </p>
+<p>Permissions mappings for document <%= documentId %>:</p>
 <p>
-This is the mapping for document <%= documentId %>:<br>
 <%
     Map permissionsMap = document.getAllRolesMappedToPermissions();
     Set roles = permissionsMap.keySet();
@@ -49,8 +49,8 @@ This is the mapping for document <%= documentId %>:<br>
 <% } %>
 </p>
 <p>
-Notice: Only the roles that has some permissions is shown above. If a role has permission "None" then
-that role is not part of the result map.
+Notice: Only the roles that have some permissions are shown above. If a role has permission "None" then
+that role is not shown.
 </p>
 </body>
 </html>
