@@ -2,17 +2,23 @@
                  com.imcode.imcms.api.NoPermissionException" isErrorPage="true" %>
 <html>
 <body>
-<h1>error.jsp : There was an error in one of the API sample pages.</h1>
-<pre>
 <%
-    if( exception instanceof NoPermissionException ){
-        out.println( "You dont have the right permission to do this.");
+    if (null != exception) {
+        %><h1>There was an error in one of the API sample pages.</h1><%
+        %><pre><%
+        if( exception instanceof NoPermissionException ){
+            out.println( "You dont have the right permission to do this.");
+        } else {
+            out.println( "Exception type: " + exception.getClass().getName()  + "<br>" );
+            out.println( "Message: " + exception.getMessage()  + "<br>" );
+            out.println( "Stack trace");
+            PrintWriter writer = new PrintWriter( out );
+            exception.printStackTrace( writer );
+        }
+        %></pre><%
     } else {
-        out.println( "Exception type: " + exception.getClass().getName() );
+        %><h1>No error.</h1><%
     }
-    out.println( "Message: " + exception.getMessage() );
-    exception.printStackTrace( new PrintWriter( out ) );
 %>
-</pre>
 </body>
 </html>
